[package]
name = "one_time_pad"
version = "0.1.0"
authors = ["Logan Saso <sasol@oregonstate.edu>"]
edition = "2018"

[dependencies]
rand = "0.6.0"


[workspace]
members = [
    "otp_enc_d",
    "keygen"
]

[[bin]]
name = "otp_enc_d"
path = "otp_enc_d/src/main.rs"

[[bin]]
name = "keygen"
path = "keygen/src/main.rs"
