[package]
name = "one_time_pad"
version = "0.1.0"
authors = ["Logan Saso <sasol@oregonstate.edu>"]

[dependencies]
rand = "0.6.0"


[workspace]
members = [
    "otp_enc_d",
    "keygen"
]

[lib]
name = "otp_d_lib"
path = "otp_enc_d/src/lib.rs"

[[bin]]
name = "otp_enc_d"
path = "otp_enc_d/src/main.rs"

[[bin]]
name = "keygen"
path = "keygen/src/main.rs"
